--- a/src/babylon-book-consultation-widget/babylon-book-consultation-widget.html
+++ b/src/babylon-book-consultation-widget/babylon-book-consultation-widget.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../bower_components/paper-input/paper-input.html">
-<link rel="import" href="../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="https://cdn.rawgit.com/martinomancino/polymer-widget-test/master/bower_components/polymer/polymer.html">
+<link rel="import" href="https://cdn.rawgit.com/martinomancino/polymer-widget-test/master/bower_components/paper-input/paper-input.html">
+<link rel="import" href="https://cdn.rawgit.com/martinomancino/polymer-widget-test/master/bower_components/paper-button/paper-button.html">
 
 <dom-module id="babylon-book-consultation-widget">
   <template>
