--- a/src/babylon-book-consultation-widget/babylon-book-consultation-widget.html
+++ b/src/babylon-book-consultation-widget/babylon-book-consultation-widget.html
@@ -21,11 +21,11 @@
       }
       
       .focused-line.paper-input-container {
-        background-color: #7601dd;
+        background: #7601dd!important;
       }
       
       label.paper-input {
-        color: #fff;
+        color: #fff!important;
       }
 
     </style>
