--- a/src/babylon-book-consultation-widget/babylon-book-consultation-widget.html
+++ b/src/babylon-book-consultation-widget/babylon-book-consultation-widget.html
@@ -16,6 +16,7 @@
       
       .paper-input-container-0 {
         padding: 8px 30px;
+        background: #fff;
       }
 
       .babylon-widget-input.button {
