--- a/src/babylon-date-time-picker/babylon-date-time-picker.html
+++ b/src/babylon-date-time-picker/babylon-date-time-picker.html
@@ -13,6 +13,7 @@
       :host {
         display: block;
         text-align: center;
+        margin: 20px 0;
       }
 
       form {
@@ -29,10 +30,8 @@
         background-color: #7601dd;
         color: #fff;
         box-shadow: none;
-        width: 80px;
+        width: auto;
         vertical-align: top;
-        line-height: 1.8;
-        height: 48px;
       }
       
       #datePicker {
