--- a/src/babylon-time-picker/babylon-time-picker.html
+++ b/src/babylon-time-picker/babylon-time-picker.html
@@ -44,6 +44,7 @@
         margin: 0 auto;
         color: #555555;
         text-align: center;
+        padding: 0;
       }
 
       .time-separator {
