--- a/src/babylon-date-time-picker/babylon-date-time-picker.html
+++ b/src/babylon-date-time-picker/babylon-date-time-picker.html
@@ -54,7 +54,7 @@
       <form is="iron-form" id="form" method="post" action="" >
         <paper-picker-input id="datePicker" icon="icons:today" picker="date" date="{{date}}"></paper-picker-input>
         <paper-picker-input id="timePicker" icon="icons:alarm" picker="time" hours="{{hours}}" minutes="{{minutes}}"></paper-picker-input>
-        <paper-button class="babylon-widget-input button" raised on-tap="_submit">Submit</paper-button>
+        <paper-button class="babylon-widget-input button" raised on-tap="_submit">Book</paper-button>
       </form>
     
     </template>
